[gd_scene load_steps=3 format=3 uid="uid://87g4wsndngl3"]

[ext_resource type="Script" path="res://gameplay/levels/game_over.gd" id="1_vnmm8"]
[ext_resource type="AudioStream" uid="uid://brqrq42tpm7n5" path="res://assets/sounds/menu_hover.wav" id="2_mndwn"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1_vnmm8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -235.0
offset_top = -171.0
offset_right = 235.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "GAME OVER !"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Score final :"

[node name="FinalScoreLabel" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.0
offset_top = 46.0
offset_right = 178.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2

[node name="Btn_Recommencer" type="Button" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Recommencer
"

[node name="Btn_Quitter" type="Button" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Quitter"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = -1

[node name="Control" type="ColorRect" parent="CanvasLayer2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.000693898, 0.000693898, 0.000693898, 1)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_mndwn")

[connection signal="focus_entered" from="CanvasLayer/VBoxContainer2/Btn_Recommencer" to="." method="_on_btn_recommencer_mouse_entered"]
[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer2/Btn_Recommencer" to="." method="_on_btn_recommencer_mouse_entered"]
[connection signal="focus_entered" from="CanvasLayer/VBoxContainer2/Btn_Quitter" to="." method="_on_btn_quitter_mouse_entered"]
[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer2/Btn_Quitter" to="." method="_on_btn_quitter_mouse_entered"]
